--- a/static/main.html
+++ b/static/main.html
@@ -23,7 +23,7 @@
             <div class="icon -red-bg -cart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 486.569 486.569"><path fill="#FFF" d="M146.069 320.369h268.1c30.4 0 55.2-24.8 55.2-55.2v-112.8-.4-.8c0-.2 0-.4-.1-.6 0-.2-.1-.5-.1-.7s-.1-.4-.1-.6c-.1-.2-.1-.4-.2-.7-.1-.2-.1-.4-.2-.6-.1-.2-.1-.4-.2-.6-.1-.2-.2-.4-.3-.7-.1-.2-.2-.4-.3-.5l-.3-.6c-.1-.2-.2-.3-.3-.5-.1-.2-.3-.4-.4-.6-.1-.2-.2-.3-.4-.5-.1-.2-.3-.3-.4-.5s-.3-.3-.4-.5-.3-.3-.4-.4l-.5-.5c-.2-.1-.3-.3-.5-.4-.2-.1-.4-.3-.6-.4-.2-.1-.3-.2-.5-.3s-.4-.2-.6-.4l-.6-.3-.6-.3-.6-.3c-.2-.1-.4-.1-.6-.2-.2-.1-.5-.2-.7-.2s-.4-.1-.5-.1c-.3-.1-.5-.1-.8-.1-.1 0-.2-.1-.4-.1l-339.8-46.9v-47.4c0-.5 0-1-.1-1.4 0-.1 0-.2-.1-.4 0-.3-.1-.6-.1-.9-.1-.3-.1-.5-.2-.8 0-.2-.1-.3-.1-.5l-.3-.9c0-.1-.1-.3-.1-.4-.1-.3-.2-.5-.4-.8-.1-.1-.1-.3-.2-.4-.1-.2-.2-.4-.4-.6-.1-.2-.2-.3-.3-.5s-.2-.3-.3-.5-.3-.4-.4-.6l-.3-.3-.6-.6-.3-.3c-.2-.2-.4-.4-.7-.6-.1-.1-.3-.2-.4-.3-.2-.2-.4-.3-.6-.5-.3-.2-.6-.4-.8-.5-.1-.1-.2-.1-.3-.2-.4-.2-.9-.4-1.3-.6l-73.7-31c-6.9-2.9-14.8.3-17.7 7.2s.3 14.8 7.2 17.7l65.4 27.6v295.8c0 28 21 51.2 48.1 54.7-4.9 8.2-7.8 17.8-7.8 28 0 30.1 24.5 54.5 54.5 54.5s54.5-24.5 54.5-54.5c0-10-2.7-19.5-7.5-27.5h121.4c-4.8 8.1-7.5 17.5-7.5 27.5 0 30.1 24.5 54.5 54.5 54.5s54.5-24.5 54.5-54.5-24.5-54.5-54.5-54.5h-255c-15.6 0-28.2-12.7-28.2-28.2v-36.6c8.2 4.8 17.9 7.6 28.2 7.6zm67.2 111.6c0 15.2-12.4 27.5-27.5 27.5s-27.5-12.4-27.5-27.5 12.4-27.5 27.5-27.5 27.5 12.3 27.5 27.5zm215.4 0c0 15.2-12.4 27.5-27.5 27.5s-27.5-12.4-27.5-27.5 12.4-27.5 27.5-27.5 27.5 12.3 27.5 27.5zm-14.5-138.6h-268.1c-15.6 0-28.2-12.7-28.2-28.2v-145.9l324.5 44.7v101.1c0 15.7-12.7 28.3-28.2 28.3z"/></svg></div>
             <div class="link -yellow-bg -center">
               <div class="count">2 товара на&nbsp;</div>
-              <div class="price">780 829 .Р</div>
+              <div class="price">780 829 <span class="currency">Р</span></div>
             </div></a>
         </div>
       </div>
@@ -156,9 +156,9 @@
             </div>
             <div class="col-xs-4">
               <div class="aside-slider">
-                <div class="btns"><a class="btn -normal" href="#">
+                <div class="btns"><a class="btn -normal" href="#first">
                     <div class="icon -red-bg"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="#FFF" d="M493.297 159.694c-12.477-30.878-31.231-59.828-56.199-84.792-24.964-24.967-53.914-43.722-84.792-56.199C321.424 6.222 288.616 0 255.822 0c-32.748 0-65.497 6.249-96.315 18.744-30.814 12.49-59.695 31.242-84.607 56.158-24.915 24.911-43.668 53.792-56.158 84.607C6.249 190.325 0 223.073 0 255.821c0 32.794 6.222 65.602 18.701 96.485 12.477 30.878 31.231 59.829 56.199 84.793 24.964 24.967 53.914 43.722 84.792 56.199 30.882 12.48 63.69 18.701 96.484 18.701 32.748 0 65.497-6.249 96.315-18.743 30.814-12.49 59.695-31.242 84.607-56.158 24.916-24.912 43.669-53.793 56.159-84.607 12.494-30.817 18.743-63.565 18.744-96.315-.001-32.792-6.223-65.601-18.704-96.482zm-31.684 179.967c-10.824 26.684-27.021 51.649-48.661 73.292-21.643 21.64-46.608 37.837-73.291 48.659-26.679 10.818-55.078 16.241-83.484 16.241-28.477 0-56.947-5.406-83.688-16.214-26.744-10.813-51.76-27.007-73.441-48.685-21.679-21.682-37.874-46.697-48.685-73.442-10.808-26.741-16.214-55.212-16.213-83.689 0-28.406 5.424-56.804 16.241-83.483 10.821-26.683 27.018-51.648 48.659-73.291 21.643-21.64 46.608-37.837 73.292-48.659 26.679-10.818 55.078-16.241 83.484-16.241 28.477 0 56.947 5.405 83.688 16.214 26.744 10.813 51.76 27.007 73.441 48.685 21.679 21.682 37.873 46.697 48.685 73.441 10.808 26.741 16.214 55.211 16.214 83.688 0 28.405-5.423 56.803-16.241 83.484z"/><path fill="#FFF" d="M362.32 149.681c-6.524-6.524-17.102-6.524-23.627 0L149.68 338.694c-6.524 6.525-6.524 17.102 0 23.627 6.525 6.525 17.102 6.525 23.627 0l189.014-189.014c6.523-6.524 6.523-17.103-.001-23.626zM246.76 137.073a50.036 50.036 0 0 0-11.009-16.589 50.031 50.031 0 0 0-16.589-11.009c-6.048-2.451-12.453-3.671-18.852-3.671s-12.804 1.22-18.852 3.671a50.036 50.036 0 0 0-16.589 11.009 50.021 50.021 0 0 0-11.009 16.589c-2.451 6.048-3.671 12.453-3.671 18.852s1.22 12.804 3.671 18.852a50.052 50.052 0 0 0 11.009 16.589 50.031 50.031 0 0 0 16.589 11.009c6.048 2.451 12.453 3.671 18.852 3.671s12.804-1.22 18.852-3.671a50.036 50.036 0 0 0 16.589-11.009 50.031 50.031 0 0 0 11.009-16.589c2.451-6.048 3.671-12.453 3.671-18.852s-1.219-12.804-3.671-18.852zm-30.965 25.147c-.814 2-2.009 3.853-3.671 5.519a16.582 16.582 0 0 1-5.518 3.671 16.755 16.755 0 0 1-6.295 1.222c-2.153 0-4.298-.412-6.295-1.222-2-.814-3.853-2.009-5.518-3.671a16.582 16.582 0 0 1-3.671-5.518 16.755 16.755 0 0 1-1.222-6.295 16.582 16.582 0 0 1 4.892-11.814 16.57 16.57 0 0 1 5.519-3.671 16.755 16.755 0 0 1 6.295-1.222c2.153 0 4.298.412 6.295 1.222 2 .814 3.853 2.009 5.518 3.671a16.582 16.582 0 0 1 3.671 5.518 16.755 16.755 0 0 1 1.222 6.295c0 2.152-.412 4.298-1.222 6.295zM369.275 326.251a50.052 50.052 0 0 0-11.009-16.589 50.021 50.021 0 0 0-16.589-11.009c-6.048-2.451-12.453-3.671-18.852-3.671s-12.804 1.22-18.852 3.671a50.036 50.036 0 0 0-16.589 11.009 50.021 50.021 0 0 0-11.009 16.589c-2.451 6.048-3.671 12.453-3.671 18.852s1.22 12.804 3.671 18.852a50.036 50.036 0 0 0 11.009 16.589 50.031 50.031 0 0 0 16.589 11.009c6.048 2.451 12.453 3.671 18.852 3.671s12.804-1.22 18.852-3.671a50.036 50.036 0 0 0 16.589-11.009 50.031 50.031 0 0 0 11.009-16.589c2.451-6.048 3.671-12.453 3.671-18.852s-1.219-12.804-3.671-18.852zm-30.964 25.145c-.814 2-2.009 3.853-3.671 5.518a16.582 16.582 0 0 1-5.518 3.671 16.755 16.755 0 0 1-6.295 1.222c-2.153 0-4.298-.412-6.295-1.222-2-.814-3.853-2.009-5.518-3.671a16.582 16.582 0 0 1-3.671-5.518 16.736 16.736 0 0 1-1.222-6.295c0-2.153.412-4.298 1.222-6.295.814-2 2.009-3.853 3.671-5.518a16.575 16.575 0 0 1 5.519-3.671 16.755 16.755 0 0 1 6.295-1.222c2.153 0 4.298.412 6.295 1.222a16.618 16.618 0 0 1 5.517 3.671 16.582 16.582 0 0 1 3.671 5.518 16.755 16.755 0 0 1 1.222 6.295c0 2.153-.412 4.299-1.222 6.295z"/></svg></div>
-                    <div class="link -yellow-bg -center">Лидеры продаж</div></a><a class="btn -normal -disabled" href="#">
+                    <div class="link -yellow-bg -center">Лидеры продаж</div></a><a class="btn -normal -disabled" href="#second">
                     <div class="icon -red-bg"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="#FFF" d="M493.297 159.694c-12.477-30.878-31.231-59.828-56.199-84.792-24.964-24.967-53.914-43.722-84.792-56.199C321.424 6.222 288.616 0 255.822 0c-32.748 0-65.497 6.249-96.315 18.744-30.814 12.49-59.695 31.242-84.607 56.158-24.915 24.911-43.668 53.792-56.158 84.607C6.249 190.325 0 223.073 0 255.821c0 32.794 6.222 65.602 18.701 96.485 12.477 30.878 31.231 59.829 56.199 84.793 24.964 24.967 53.914 43.722 84.792 56.199 30.882 12.48 63.69 18.701 96.484 18.701 32.748 0 65.497-6.249 96.315-18.743 30.814-12.49 59.695-31.242 84.607-56.158 24.916-24.912 43.669-53.793 56.159-84.607 12.494-30.817 18.743-63.565 18.744-96.315-.001-32.792-6.223-65.601-18.704-96.482zm-31.684 179.967c-10.824 26.684-27.021 51.649-48.661 73.292-21.643 21.64-46.608 37.837-73.291 48.659-26.679 10.818-55.078 16.241-83.484 16.241-28.477 0-56.947-5.406-83.688-16.214-26.744-10.813-51.76-27.007-73.441-48.685-21.679-21.682-37.874-46.697-48.685-73.442-10.808-26.741-16.214-55.212-16.213-83.689 0-28.406 5.424-56.804 16.241-83.483 10.821-26.683 27.018-51.648 48.659-73.291 21.643-21.64 46.608-37.837 73.292-48.659 26.679-10.818 55.078-16.241 83.484-16.241 28.477 0 56.947 5.405 83.688 16.214 26.744 10.813 51.76 27.007 73.441 48.685 21.679 21.682 37.873 46.697 48.685 73.441 10.808 26.741 16.214 55.211 16.214 83.688 0 28.405-5.423 56.803-16.241 83.484z"/><path fill="#FFF" d="M362.32 149.681c-6.524-6.524-17.102-6.524-23.627 0L149.68 338.694c-6.524 6.525-6.524 17.102 0 23.627 6.525 6.525 17.102 6.525 23.627 0l189.014-189.014c6.523-6.524 6.523-17.103-.001-23.626zM246.76 137.073a50.036 50.036 0 0 0-11.009-16.589 50.031 50.031 0 0 0-16.589-11.009c-6.048-2.451-12.453-3.671-18.852-3.671s-12.804 1.22-18.852 3.671a50.036 50.036 0 0 0-16.589 11.009 50.021 50.021 0 0 0-11.009 16.589c-2.451 6.048-3.671 12.453-3.671 18.852s1.22 12.804 3.671 18.852a50.052 50.052 0 0 0 11.009 16.589 50.031 50.031 0 0 0 16.589 11.009c6.048 2.451 12.453 3.671 18.852 3.671s12.804-1.22 18.852-3.671a50.036 50.036 0 0 0 16.589-11.009 50.031 50.031 0 0 0 11.009-16.589c2.451-6.048 3.671-12.453 3.671-18.852s-1.219-12.804-3.671-18.852zm-30.965 25.147c-.814 2-2.009 3.853-3.671 5.519a16.582 16.582 0 0 1-5.518 3.671 16.755 16.755 0 0 1-6.295 1.222c-2.153 0-4.298-.412-6.295-1.222-2-.814-3.853-2.009-5.518-3.671a16.582 16.582 0 0 1-3.671-5.518 16.755 16.755 0 0 1-1.222-6.295 16.582 16.582 0 0 1 4.892-11.814 16.57 16.57 0 0 1 5.519-3.671 16.755 16.755 0 0 1 6.295-1.222c2.153 0 4.298.412 6.295 1.222 2 .814 3.853 2.009 5.518 3.671a16.582 16.582 0 0 1 3.671 5.518 16.755 16.755 0 0 1 1.222 6.295c0 2.152-.412 4.298-1.222 6.295zM369.275 326.251a50.052 50.052 0 0 0-11.009-16.589 50.021 50.021 0 0 0-16.589-11.009c-6.048-2.451-12.453-3.671-18.852-3.671s-12.804 1.22-18.852 3.671a50.036 50.036 0 0 0-16.589 11.009 50.021 50.021 0 0 0-11.009 16.589c-2.451 6.048-3.671 12.453-3.671 18.852s1.22 12.804 3.671 18.852a50.036 50.036 0 0 0 11.009 16.589 50.031 50.031 0 0 0 16.589 11.009c6.048 2.451 12.453 3.671 18.852 3.671s12.804-1.22 18.852-3.671a50.036 50.036 0 0 0 16.589-11.009 50.031 50.031 0 0 0 11.009-16.589c2.451-6.048 3.671-12.453 3.671-18.852s-1.219-12.804-3.671-18.852zm-30.964 25.145c-.814 2-2.009 3.853-3.671 5.518a16.582 16.582 0 0 1-5.518 3.671 16.755 16.755 0 0 1-6.295 1.222c-2.153 0-4.298-.412-6.295-1.222-2-.814-3.853-2.009-5.518-3.671a16.582 16.582 0 0 1-3.671-5.518 16.736 16.736 0 0 1-1.222-6.295c0-2.153.412-4.298 1.222-6.295.814-2 2.009-3.853 3.671-5.518a16.575 16.575 0 0 1 5.519-3.671 16.755 16.755 0 0 1 6.295-1.222c2.153 0 4.298.412 6.295 1.222a16.618 16.618 0 0 1 5.517 3.671 16.582 16.582 0 0 1 3.671 5.518 16.755 16.755 0 0 1 1.222 6.295c0 2.153-.412 4.299-1.222 6.295z"/></svg></div>
                     <div class="link -yellow-bg -center">Новинки</div></a>
                   <!--a(href="#").btn.-normal
@@ -170,8 +170,8 @@
                 <div class="aside-slider-left"></div>
                 <div class="aside-slider-right"></div>
                 <div class="aside-slider-wrap owl-carousel">
-                  <div class="item">
-                    <div class="title">SYMA X23 m<br>плати за 2 - бери 3</div>
+                  <div class="item" data-tab="first">
+                    <div class="title">SYMA X23 m<br>плати за 2 - бери 1</div>
                     <div class="sub-title">Акция действует с 18 октября по 31 ноября</div>
                     <div class="image"><img src="images/walli.jpg" alt=""/>
                       <div class="prices">
@@ -180,8 +180,8 @@
                       </div>
                     </div>
                   </div>
-                  <div class="item">
-                    <div class="title">SYMA X23 m<br>плати за 2 - бери 3</div>
+                  <div class="item" data-tab="first">
+                    <div class="title">SYMA X23 m<br>плати за 2 - бери 1</div>
                     <div class="sub-title">Акция действует с 18 октября по 31 ноября</div>
                     <div class="image"><img src="images/walli.jpg" alt=""/>
                       <div class="prices">
@@ -190,8 +190,28 @@
                       </div>
                     </div>
                   </div>
-                  <div class="item">
-                    <div class="title">SYMA X23 m<br>плати за 2 - бери 3</div>
+                  <div class="item" data-tab="first">
+                    <div class="title">SYMA X23 m<br>плати за 2 - бери 1</div>
+                    <div class="sub-title">Акция действует с 18 октября по 31 ноября</div>
+                    <div class="image"><img src="images/walli.jpg" alt=""/>
+                      <div class="prices">
+                        <div class="sale">цена <s>205 000</s></div>
+                        <div class="price">175 000 ₽</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item" data-tab="second">
+                    <div class="title">SYMA X23 m<br>плати за 2 - бери 2</div>
+                    <div class="sub-title">Акция действует с 18 октября по 31 ноября</div>
+                    <div class="image"><img src="images/walli.jpg" alt=""/>
+                      <div class="prices">
+                        <div class="sale">цена <s>205 000</s></div>
+                        <div class="price">175 000 ₽</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item" data-tab="second">
+                    <div class="title">SYMA X23 m<br>плати за 2 - бери 2</div>
                     <div class="sub-title">Акция действует с 18 октября по 31 ноября</div>
                     <div class="image"><img src="images/walli.jpg" alt=""/>
                       <div class="prices">
@@ -232,7 +252,7 @@
               </div>
               <div class="input -mar">
                 <select class="select" name="category2">
-                  <option value="0">Цена: от 0 до 254 000 ₽</option>
+                  <option value="0">Цена: от 0 до 254 000 руб.</option>
                   <option value="0">Категория 2</option>
                   <option value="0">Категория 3</option>
                   <option value="0">Категория 4</option>
@@ -395,13 +415,13 @@
                   <div class="name">Бесплатный звонок по России</div><a class="text" href="mailto:88007753106@mail.ru">E-mail: 88007753106@mail.ru</a><a class="text" href="tel:8-800-775-3106">8-800-775-3106</a>
                 </div>
                 <div class="contacts">
-                  <div class="name">Бесплатный звонок по России</div><a class="text" href="mailto:88007753106@mail.ru">E-mail: 88007753106@mail.ru</a><a class="text" href="tel:8-800-775-3106">8-800-775-3106</a>
+                  <div class="name">Скворцов Игорь Игоревич</div><a class="text" href="mailto:E-mail: igor.s@centr-to.ru">E-mail: E-mail: igor.s@centr-to.ru</a><a class="text" href="tel:8-913-070-5566">8-913-070-5566</a>
                 </div>
                 <div class="contacts">
-                  <div class="name">Бесплатный звонок по России</div><a class="text" href="mailto:88007753106@mail.ru">E-mail: 88007753106@mail.ru</a><a class="text" href="tel:8-800-775-3106">8-800-775-3106</a>
+                  <div class="name">Артеев Артур Семенович</div><a class="text" href="mailto:artur.a@centr-to.ru">E-mail: artur.a@centr-to.ru</a><a class="text" href="tel:8-913-070-0066">8-913-070-0066</a>
                 </div>
                 <div class="contacts">
-                  <div class="name">Бесплатный звонок по России</div><a class="text" href="mailto:88007753106@mail.ru">E-mail: 88007753106@mail.ru</a><a class="text" href="tel:8-800-775-3106">8-800-775-3106</a>
+                  <div class="name">Кувшинов Алексей Александрович</div><a class="text" href="mailto:aleksey.k@centr-to.ru">E-mail: aleksey.k@centr-to.ru</a><a class="text" href="tel:8-913-070-0807">8-913-070-0807</a>
                 </div>
               </div>
             </div>
