--- a/static/main.html
+++ b/static/main.html
@@ -2,9 +2,12 @@
 <html lang="ru">
   <head>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;amp;subset=cyrillic" rel="stylesheet"/>
-    <link rel="stylesheet" href="styles/main.css"/>
     <link rel="stylesheet" href="styles/assets/owl.carousel.min.css"/>
     <link rel="stylesheet" href="styles/assets/owl.theme.default.min.css"/>
+    <link rel="stylesheet" href="styles/assets/jquery-ui.min.css"/>
+    <link rel="stylesheet" href="styles/assets/jquery-ui.structure.min.css"/>
+    <link rel="stylesheet" href="styles/assets/jquery-ui.theme.min.css"/>
+    <link rel="stylesheet" href="styles/main.css"/>
     <meta charset="UTF-8"/>
     <title>Главная</title>
   </head>
@@ -251,12 +254,17 @@
                 </select>
               </div>
               <div class="input -mar">
-                <select class="select" name="category2">
-                  <option value="0">Цена: от 0 до 254 000 руб.</option>
-                  <option value="0">Категория 2</option>
-                  <option value="0">Категория 3</option>
-                  <option value="0">Категория 4</option>
-                </select>
+                <div class="slider"> 
+                  <label>Цена: от
+                    <input class="slider-min-val" type="text" value="0" size="1"/>
+                  </label>
+                  <label>до
+                    <input class="slider-max-val" type="text" value="254 000" size="7"/>руб.
+                  </label>
+                  <div class="slider-price-wrap">
+                    <div class="slider-price"></div>
+                  </div>
+                </div>
               </div>
               <div class="input -mar">
                 <select class="select" name="category3">
@@ -442,6 +450,8 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="../scripts/jquery-ui.min.js"></script>
+    <script src="../scripts/jquery.numeric.min.js"></script>
     <script src="../scripts/owl.carousel.min.js"></script>
     <script src="../scripts/script.js"></script>
   </body>
