Добавлено меню каталога

--- a/static/main.html
+++ b/static/main.html
@@ -34,7 +34,36 @@
         <div class="row between-xs middle-xs">
           <div class="logo"><img src="images/logo-lg.png" alt="Логотип"/></div>
           <div class="top-bar-second">
-            <nav class="main-menu"><a class="link" href="#">Каталог</a><a class="link" href="#">Сравнение</a><a class="link" href="#">Отзывы</a></nav>
+            <nav class="main-menu">
+              <div class="link catalog">Каталог
+                <div class="wrapper"><a class="item" href="#">
+                    <div class="image"><img src="images/helic.jpg"/></div>
+                    <div class="title">Квадрокоптеры</div></a><a class="item" href="#">
+                    <div class="image"><img src="images/helic.jpg"/></div>
+                    <div class="title">Квадрокоптеры</div></a><a class="item" href="#">
+                    <div class="image"><img src="images/helic.jpg"/></div>
+                    <div class="title">Квадрокоптеры</div></a><a class="item" href="#">
+                    <div class="image"><img src="images/helic.jpg"/></div>
+                    <div class="title">Квадрокоптеры</div></a><a class="item" href="#">
+                    <div class="image"><img src="images/helic.jpg"/></div>
+                    <div class="title">Квадрокоптеры</div></a><a class="item" href="#">
+                    <div class="image"><img src="images/helic.jpg"/></div>
+                    <div class="title">Квадрокоптеры</div></a><a class="item" href="#">
+                    <div class="image"><img src="images/helic.jpg"/></div>
+                    <div class="title">Квадрокоптеры</div></a><a class="item" href="#">
+                    <div class="image"><img src="images/helic.jpg"/></div>
+                    <div class="title">Квадрокоптеры</div></a><a class="item" href="#">
+                    <div class="image"><img src="images/helic.jpg"/></div>
+                    <div class="title">Квадрокоптеры</div></a><a class="item" href="#">
+                    <div class="image"><img src="images/helic.jpg"/></div>
+                    <div class="title">Квадрокоптеры</div></a><a class="item" href="#">
+                    <div class="image"><img src="images/helic.jpg"/></div>
+                    <div class="title">Квадрокоптеры</div></a><a class="item" href="#">
+                    <div class="image"><img src="images/helic.jpg"/></div>
+                    <div class="title">Квадрокоптеры</div></a>
+                </div>
+              </div><a class="link" href="#">Сравнение</a><a class="link" href="#">Отзывы</a>
+            </nav>
             <div class="btn-wrap"><a class="btn" href="#">
                 <div class="icon -mr -flex-center"><img src="icons/marks.png"/></div>
                 <div class="link -col -start">
@@ -275,7 +304,7 @@
                 </select>
               </div>
               <label class="input -checkbox -mar">В наличии
-                <input class="checkbox" type="checkbox"/>
+                <input class="checkbox" type="checkbox"/><span class="checked"></span>
               </label>
               <button class="btn -submit -gray">Подобрать</button>
             </div>
